# m3_mlflow_playground

./: .gitignore  README.md  base_env.yml  docker-compose.yml  example.env
demo_project/: README.md  pyproject.toml
demo_project/demo_project/: config.py  create_permission.py  create_user.py  delete_user.py  demo.py  rest_api.py
docker/: Dockerfile  requirements.txt
